--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,12 @@
 name: AOMS2Util
 main: tk.applism.AOMS2Util
-version: 1.0.0
+version: 1.0.1
 api-version: 1.16
 author: applearon
 description: AOMS2 Utility mod, includes VoidProtect and JumpPads!
 website: applism.tk
+
+commands:
+  A2Utils:
+    description: AOMS2Util info Command
+    usage: /<command>
